--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     tools:context=".LoginActivity">
 
     <LinearLayout
@@ -12,29 +13,27 @@
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="500px"
+            android:layout_marginVertical="60dp"
             android:orientation="vertical"
+            android:background="@drawable/xpo"
             android:layout_marginTop="@dimen/margin_top_title_where_login">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textSize="@dimen/margin_top_title_where_login"
-                android:text="@string/title_where_login"/>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:orientation="vertical">
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/btn_signin_where_login"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:layout_gravity="center"
                 android:layout_centerInParent="true"
-                android:visibility="visible"
-                tools:visibility="gone" />
+                android:visibility="visible" />
         </LinearLayout>
     </LinearLayout>
 
