--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,8 +29,9 @@
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/btn_signin_where_login"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="2dp"
+                android:layout_height="80dp"
+
+                android:padding="8dp"
                 android:layout_gravity="center"
                 android:layout_centerInParent="true"
                 android:visibility="visible" />
