--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -11,8 +11,11 @@
         android:id="@+id/btn_confirm_where_map"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="8dp"
         android:layout_alignParentBottom="true"
-        android:text="Confirm"/>
+        android:text="Confirm"
+        android:background="@android:color/white"
+        android:textColor="@color/colorPrimary"/>
 
     <LinearLayout
         android:layout_width="match_parent"
